<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.embedded.treinamento.mytrip.MainActivity"
    android:background="@color/colorLightGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edtDistance"
            style="@style/mCustomEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/distance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/lbl_total_km"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkGray"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/edtPrice"
            style="@style/mCustomEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/price" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/lbl_price_per_liter"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkGray"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/edtAutonomy"
            style="@style/mCustomEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/autonomy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:text="@string/lbl_kms_per_liter"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkGray"
            android:textSize="10sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/lbl_total_expenditure"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="R$ 0,00"
            android:textAllCaps="true"
            android:textColor="#fd6a6a"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/round_btn"
            android:padding="20dp"
            android:text="@string/calculate"
            android:textAllCaps="true"
            android:textColor="@color/colorLightGray"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>
